--- a/r/re/ren/rentalcargroup.com.html
+++ b/r/re/ren/rentalcargroup.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the rentalcargroup.com privacy policy that was archived on 2013-12-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131222115031id_/http%3A//www.rentalcargroup.com/privacypolicy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the rentalcargroup.com privacy policy that was archived on 2014-02-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140224001547id_/http%3A//www.rentalcargroup.com/privacypolicy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html lang="en"><head>
 <title>Privacy Policy - RentalCarGroup car hire, car rental with all-inclusive rates</title>
@@ -12,11 +12,11 @@
 <meta name="distribution" content="Global">
 <meta http-equiv="Expires" content="Mon, 30 Jan 2015 11:15:01 GMT">
 <meta name="revisit-after" content="7 days">
-<meta name="copyright" content="Copyright © 1996-2013 rentalcargroup.com. all rights reserved.">
+<meta name="copyright" content="Copyright © 1996-2014 rentalcargroup.com. all rights reserved.">
 <meta name="robots" content="INDEX,FOLLOW">
 <meta name="verify-v1" content="eJvUbgzwl8YJm1EUiP6vISQloc1WXP/IxPOy/lkO3gE=">
-<link rel="stylesheet" type="text/css" href="/styles/rcg_new.css?v=1387706352">
-<link rel="stylesheet" type="text/css" href="/styles/rcg_res.css?v=1387706352">
+<link rel="stylesheet" type="text/css" href="/styles/rcg_new.css?v=1393124432">
+<link rel="stylesheet" type="text/css" href="/styles/rcg_res.css?v=1393124432">
 <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script language="JavaScript" type="text/JavaScript" src="/js/jquery-1.7.2.min.js"></script>
 <script type="text/javascript" src="/js/dropdown.js?v=0.3"></script>
 <script type="text/javascript">
@@ -123,8 +123,8 @@
 <div class="clear">
 <ul class="breadcrumbs">
 <li itemscope="" itemtype="http://data-vocabulary.org/Breadcrumb">
-<a href="./" itemprop="url" title="Car Rental">
-<span itemprop="title">Car Rental</span>
+<a href="./" itemprop="url" title="Rentalcargroup.com">
+<span itemprop="title">Rentalcargroup.com</span>
 </a></li>
 <li> / </li>
 <li> Privacy Policy </li>
@@ -190,7 +190,7 @@ We protect our customer information. Any personal data we receive through our si
 <p>Important:&nbsp;&nbsp; <a href="sitemap.htm" title="Site Map">Site Map</a>|<a href="privacypolicy.htm" title="Privacy Policy">Privacy Policy</a>|<a href="securitypolicy.htm" title="Security Policy">Security Policy</a>|<a href="termsconditions.htm" title="Terms &amp; Conditions">Terms &amp; Conditions</a></p>
 <p>Travel extras:&nbsp;&nbsp;<a href="http://www.hotelrentalgroup.com" target="_new">Hotel Bookings</a>|<a href="http://www.bookyourgolf.net" target="_new">Golf Holidays</a>
 </p>
-<div>© 1996 - 2013&nbsp;RentalCarGroup all rights reserved</div>
+<div>© 1996 - 2014&nbsp;RentalCarGroup all rights reserved</div>
 </div>
 <script type="text/javascript" src="http://d31qbv1cthcecs.cloudfront.net/atrk.js"></script><script type="text/javascript">_atrk_opts = { atrk_acct: "FBZMe1aoyI00W8", domain:"rentalcargroup.com"}; atrk ();</script>
 <script language="javascript1.3" type="text/javascript">
