--- a/f/fa/fam/famecrowd.com.html
+++ b/f/fa/fam/famecrowd.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the famecrowd.com privacy policy that was archived on 2013-09-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130930032231id_/http%3A//famecrowd.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the famecrowd.com privacy policy that was archived on 2014-02-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140224020159id_/http%3A//www.famecrowd.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en-US"><head>
   <meta charset="UTF-8">
