--- a/l/la/lan/landofthebrave.info.html
+++ b/l/la/lan/landofthebrave.info.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the landofthebrave.info privacy policy that was archived on 2013-09-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130930043558id_/http%3A//www.landofthebrave.info/colonial-america-privacy-statement.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the landofthebrave.info privacy policy that was archived on 2014-02-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140224020804id_/http%3A//www.landofthebrave.info/colonial-america-privacy-statement.htm) for the most accurate reproduction.-->
 
 <html><head>
 <meta name="robots" content="noindex">
@@ -31,9 +31,7 @@
 <tbody><tr>
 <td>
 <p align="center">
-<!-- ValueClick Media 468x60 and 728x90 Banner CODE for Colonial America -->
 <script src="http://cdn.fastclick.net/js/adcodes/pubcode.min.js"></script><script type="text/javascript">document.write('<scr'+'ipt type="text/javascript">(function () {try{VCM.media.render({sid:66621,media_id:1,media_type:5,version:"1.2"});} catch(e){document.write(\'<scr\' + \'ipt type="text/javascript" src="http://media.fastclick.net/w/get.media?sid=66621&m=1&tp=5&d=j&t=n&exc=1"></scr\' + \'ipt>\');}}());</scr'+'ipt>');</script><script type="text/javascript">(function () {try{VCM.media.render({sid:66621,media_id:1,media_type:5,version:"1.2"});} catch(e){document.write('<scr' + 'ipt type="text/javascript" src="http://media.fastclick.net/w/get.media?sid=66621&m=1&tp=5&d=j&t=n&exc=1"></scr' + 'ipt>');}}());</script><script type="text/javascript" src="http://media.fastclick.net/w/get.media?sid=66621&amp;m=1&amp;tp=5&amp;d=j&amp;t=n&amp;exc=1"></script><noscript><a href="http://media.fastclick.net/w/click.here?sid=66621&m=1&c=1" target="_blank"><img src="http://media.fastclick.net/w/get.media?sid=66621&m=1&tp=5&d=s&c=1&vcm_acv=1.2" width=728 height=90 border=1></a></noscript>
-<!-- ValueClick Media 468x60 and 728x90 Banner CODE for Colonial America -->
 </p></td>
 </tr>
 </tbody></table>
@@ -222,9 +220,7 @@ Index</a></font></b></p></td>
 <tbody><tr>
 <td>
 <p align="center">
-<!-- ValueClick Media 300x250 Medium Rectangle CODE for Colonial America -->
 <script src="http://cdn.fastclick.net/js/adcodes/pubcode.min.js"></script><script type="text/javascript">document.write('<scr'+'ipt type="text/javascript">(function () {try{VCM.media.render({sid:66621,media_id:6,media_type:8,version:"1.2"});} catch(e){document.write(\'<scr\' + \'ipt type="text/javascript" src="http://media.fastclick.net/w/get.media?sid=66621&m=6&tp=8&d=j&t=n&exc=1"></scr\' + \'ipt>\');}}());</scr'+'ipt>');</script><script type="text/javascript">(function () {try{VCM.media.render({sid:66621,media_id:6,media_type:8,version:"1.2"});} catch(e){document.write('<scr' + 'ipt type="text/javascript" src="http://media.fastclick.net/w/get.media?sid=66621&m=6&tp=8&d=j&t=n&exc=1"></scr' + 'ipt>');}}());</script><script type="text/javascript" src="http://media.fastclick.net/w/get.media?sid=66621&amp;m=6&amp;tp=8&amp;d=j&amp;t=n&amp;exc=1"></script><noscript><a href="http://media.fastclick.net/w/click.here?sid=66621&m=6&c=1" target="_blank"><img src="http://media.fastclick.net/w/get.media?sid=66621&m=6&tp=8&d=s&c=1&vcm_acv=1.2" width=300 height=250 border=1></a></noscript>
-<!-- ValueClick Media 300x250 Medium Rectangle CODE for Colonial America -->
 </p></td>
 </tr>
 </tbody></table>
@@ -315,15 +311,13 @@ Index</a></font></b></p></td>
 </tr>
 </tbody></table>
 </div>
-<!-- ValueClick Media POP-UNDER CODE for Colonial America (0.25 hour) -->
 <script src="http://cdn.fastclick.net/js/adcodes/pubcode.min.js"></script><script type="text/javascript">document.write('<scr'+'ipt type="text/javascript">(function () {try{VCM.media.render({sid:66621,media_id:2,media_type:2,version:"1.2",pfc:900000});} catch(e){}}());</scr'+'ipt>');</script><script type="text/javascript">(function () {try{VCM.media.render({sid:66621,media_id:2,media_type:2,version:"1.2",pfc:900000});} catch(e){}}());</script>
-<!-- ValueClick Media POP-UNDER CODE for Colonial America -->
 <script type="text/javascript">(function(){var c=window,e="",f="&",l="&b_cdr=",m="&b_cihrl=",n="&b_cii=",q="&b_cilrl=",r="&b_ncdl=",s="&b_ncii=",t="&b_ncini=",u="&b_ncl=",v="&exptid=",w="&ft=",x="&hft=",y="&htmlAt=",z="&ifr=0",A="&ifr=1",B="&nrp=",C="&r",D="&url=",E="=",F="?",G="beforeunload",H="ets=",I="load",J="load:",K="on",L="unload:";c.pagespeed=c.pagespeed||{};var M=c.pagespeed,N=function(a,b,d,g,h,k){this.f=a;this.a=b;this.c=d;this.d=g;this.b=h;this.g=k;this.h=e};M.beaconUrl=M.h;
 N.prototype.e=function(){var a=this.f,b=c.mod_pagespeed_start,d=Number(new Date)-b,a=a+(-1==a.indexOf(F)?F:f),a=a+H+(this.a==I?J:L),a=a+d,a=a+(C+this.a+E);c.performance?(d=c.performance.timing,b=d.navigationStart,a+=d.loadEventStart-b):a+=d;this.a==G&&c.mod_pagespeed_loaded||(a+=c.parent!=c?A:z,this.a==I&&(c.mod_pagespeed_loaded=!0,(d=c.mod_pagespeed_num_resources_prefetched)&&(a+=B+d),(d=c.mod_pagespeed_prefetch_start)&&(a+=y+(b-d))),M.panelLoader&&(b=M.panelLoader.getCsiTimings().time,a+=l+b.CRITICAL_DATA_RECEIVED+
 n+b.CRITICAL_IMAGES_INLINED+q+b.CRITICAL_IMAGES_LOW_RES_LOADED+m+b.CRITICAL_IMAGES_HIGH_RES_LOADED+r+b.NON_CACHEABLE_DATA_LOADED+u+b.NON_CRITICAL_LOADED,b=M.panelLoader.getCriticalImagesInfo(),a+=s+b.NUM_CRITICAL_IMAGES_INLINED+t+b.NUM_CRITICAL_IMAGES_NOT_INLINED),this.c!=e&&(a+=x+this.c),this.d!=e&&(a+=w+this.d),this.b!=e&&(a+=v+this.b),a+=D+encodeURIComponent(this.g),M.beaconUrl=a,(new Image).src=a)};
 M.i=function(a,b,d,g,h,k){var p=new N(a,b,d,g,h,k);c.addEventListener?c.addEventListener(b,function(){p.e()},!1):c.attachEvent(K+b,function(){p.e()})};M.addInstrumentationInit=M.i;})();
 
-pagespeed.addInstrumentationInit('http://1-ps.googleusercontent.com/beacon?org=82_1_jt', 'load', '38', '86', '', 'http://www.landofthebrave.info/colonial-america-privacy-statement.htm');</script><!-- Place this tag after the last +1 button tag. -->
+pagespeed.addInstrumentationInit('http://1-ps.googleusercontent.com/beacon?org=82_1_jt', 'load', '38', '86', '', 'http://www.landofthebrave.info/colonial-america-privacy-statement.htm');</script>
 <script type="text/javascript">
   (function() {
     var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
@@ -331,12 +325,13 @@ pagespeed.addInstrumentationInit('http://1-ps.googleusercontent.com/beacon?org=8
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
   })();
 </script>
-<script pagespeed_no_defer="" type="text/javascript">(function(){var e=window,f=Math,g="round",h="performance",k="&rit_script=",r="&rit_link=",y="&rit_img=",z="&rit_css=",A="&nttfb=",B="&nfd=",C="&ndt=",D="&nct=",E="&nbt=",F="&mfd=",G="&attfb=",H="&afd=",I="&adt=",J="&act=",K="&abt=",L="";e.pagespeed=e.pagespeed||{};var M=e.pagespeed;
-M.getResourceTimingData=function(){if(e[h]&&(e[h].getEntries||e[h].webkitGetEntries)){for(var s=0,t=0,l=0,u=0,m=0,v=0,n=0,w=0,p=0,x=0,q=0,c={},d=e[h].getEntries?e[h].getEntries():e[h].webkitGetEntries(),b=0;b<d.length;b++){var a=d[b].duration;0<a&&(s+=a,++l,t=f.max(t,a));a=d[b].connectEnd-d[b].connectStart;0<a&&(v+=a,++n);a=d[b].domainLookupEnd-d[b].domainLookupStart;0<a&&(u+=a,++m);a=d[b].initiatorType;c[a]?++c[a]:c[a]=1;a=d[b].requestStart-d[b].fetchStart;0<a&&(x+=a,++q);a=d[b].responseStart-d[b].requestStart;
-0<a&&(w+=a,++p)}return H+(l?f[g](s/l):0)+B+l+F+f[g](t)+J+(n?f[g](v/n):0)+D+n+I+(m?f[g](u/m):0)+C+m+K+(q?f[g](x/q):0)+E+q+G+(p?f[g](w/p):0)+A+p+(c.css?z+c.css:L)+(c.link?r+c.link:L)+(c.script?k+c.script:L)+(c.img?y+c.img:L)}return L};M.getResourceTimingData=M.getResourceTimingData;})();
-(function(){var c=encodeURIComponent,f=window,h="performance",k="unload:",l="on",m="load:",n="load",p="ets=",q="beforeunload",r="EventStart",s="?",t="=",u="&url=",v="&ttfb=",w="&req_start=",x="&ref=",y="&r",z="&nt=",A="&nrp=",B="&nav=",C="&ifr=1",D="&ifr=0",E="&htmlAt=",F="&fp=",G="&dwld=",H="&dom_c=",I="&dns=",J="&connect=",K="&ccul=",L="&ccrl=",M="&ccos=",N="&ccis=",O="&cces=",P="&b_csi=",Q="&",R="";f.pagespeed=f.pagespeed||{};var S=f.pagespeed,T=function(a,d,b,e){this.d=a;this.a=d;this.b=b;this.e=e};S.beaconUrl=R;
-T.prototype.c=function(){var a=this.d,d=f.mod_pagespeed_start,b=Number(new Date)-d,a=a+(-1==a.indexOf(s)?s:Q),a=a+p+(this.a==n?m:k),a=a+b;if(this.a!=q||!f.mod_pagespeed_loaded){a+=y+this.a+t;if(f[h]){var b=f[h].timing,e=b.navigationStart,g=b.requestStart,a=a+(b[this.a+r]-e),a=a+(B+(b.fetchStart-e)),a=a+(I+(b.domainLookupEnd-b.domainLookupStart)),a=a+(J+(b.connectEnd-b.connectStart)),a=a+(w+(g-e)),a=a+(v+(b.responseStart-g)),a=a+(G+(b.responseEnd-b.responseStart)),a=a+(H+(b.domContentLoadedEventStart-
-e));f[h].navigation&&(a+=z+f[h].navigation.type);e=-1;b.msFirstPaint?e=b.msFirstPaint:f.chrome&&f.chrome.loadTimes&&(e=Math.floor(1E3*f.chrome.loadTimes().firstPaintTime));e-=g;0<=e&&(a+=F+e)}else a+=b;S.getResourceTimingData&&f.parent==f&&(a+=S.getResourceTimingData());a+=f.parent!=f?C:D;this.a==n&&(f.mod_pagespeed_loaded=!0,(b=f.mod_pagespeed_num_resources_prefetched)&&(a+=A+b),(b=f.mod_pagespeed_prefetch_start)&&(a+=E+(d-b)));S.panelLoader&&(d=S.panelLoader.getCsiTimingsString(),d!=R&&(a+=P+d));
-S.criticalCss&&(d=S.criticalCss,a+=N+d.total_critical_inlined_size+O+d.total_original_external_size+M+d.total_overhead_size+L+d.num_replaced_links+K+d.num_unreplaced_links);this.b!=R&&(a+=this.b);document.referrer&&(a+=x+c(document.referrer));a+=u+c(this.e);S.beaconUrl=a;(new Image).src=a}};S.f=function(a,d,b,e){var g=new T(a,d,b,e);f.addEventListener?f.addEventListener(d,function(){g.c()},!1):f.attachEvent(l+d,function(){g.c()})};S.addInstrumentationInit=S.f;})();
+<script pagespeed_no_defer="" type="text/javascript">(function(){var e=window,f=Math,g="round",h="performance";e.pagespeed=e.pagespeed||{};var q=e.pagespeed;
+q.getResourceTimingData=function(){if(e[h]&&(e[h].getEntries||e[h].webkitGetEntries)){for(var r=0,s=0,k=0,t=0,l=0,u=0,m=0,v=0,n=0,w=0,p=0,c={},d=e[h].getEntries?e[h].getEntries():e[h].webkitGetEntries(),b=0;b<d.length;b++){var a=d[b].duration;0<a&&(r+=a,++k,s=f.max(s,a));a=d[b].connectEnd-d[b].connectStart;0<a&&(u+=a,++m);a=d[b].domainLookupEnd-d[b].domainLookupStart;0<a&&(t+=a,++l);a=d[b].initiatorType;c[a]?++c[a]:c[a]=1;a=d[b].requestStart-d[b].fetchStart;0<a&&(w+=a,++p);a=d[b].responseStart-d[b].requestStart;
+0<a&&(v+=a,++n)}return"&afd="+(k?f[g](r/k):0)+"&nfd="+k+"&mfd="+f[g](s)+"&act="+(m?f[g](u/m):0)+"&nct="+m+"&adt="+(l?f[g](t/l):0)+"&ndt="+l+"&abt="+(p?f[g](w/p):0)+"&nbt="+p+"&attfb="+(n?f[g](v/n):0)+"&nttfb="+n+(c.css?"&rit_css="+c.css:"")+(c.link?"&rit_link="+c.link:"")+(c.script?"&rit_script="+c.script:"")+(c.img?"&rit_img="+c.img:"")}return""};q.getResourceTimingData=q.getResourceTimingData;})();
+(function(){var c=encodeURIComponent,g=window,h="performance";g.pagespeed=g.pagespeed||{};var l=g.pagespeed,m=function(f,a,d,b){this.c=f;this.a=a;this.b=d;this.d=b};l.beaconUrl="";
+var n=function(f){var a=f.c,d=g.mod_pagespeed_start,b=Number(new Date)-d,a=a+(-1==a.indexOf("?")?"?":"&"),a=a+"ets="+("load"==f.a?"load:":"unload:"),a=a+b;if("beforeunload"!=f.a||!g.mod_pagespeed_loaded){a+="&r"+f.a+"=";if(g[h]){var b=g[h].timing,e=b.navigationStart,k=b.requestStart,a=a+(b[f.a+"EventStart"]-e),a=a+("&nav="+(b.fetchStart-e)),a=a+("&dns="+(b.domainLookupEnd-b.domainLookupStart)),a=a+("&connect="+(b.connectEnd-b.connectStart)),a=a+("&req_start="+(k-e)),a=a+("&ttfb="+(b.responseStart-
+k)),a=a+("&dwld="+(b.responseEnd-b.responseStart)),a=a+("&dom_c="+(b.domContentLoadedEventStart-e));g[h].navigation&&(a+="&nt="+g[h].navigation.type);e=-1;b.msFirstPaint?e=b.msFirstPaint:g.chrome&&g.chrome.loadTimes&&(e=Math.floor(1E3*g.chrome.loadTimes().firstPaintTime));e=e-k;0<=e&&(a+="&fp="+e)}else a+=b;l.getResourceTimingData&&g.parent==g&&(a+=l.getResourceTimingData());a+=g.parent!=g?"&ifr=1":"&ifr=0";"load"==f.a&&(g.mod_pagespeed_loaded=!0,(b=g.mod_pagespeed_num_resources_prefetched)&&(a+=
+"&nrp="+b),(b=g.mod_pagespeed_prefetch_start)&&(a+="&htmlAt="+(d-b)));l.panelLoader&&(d=l.panelLoader.getCsiTimingsString(),""!=d&&(a+="&b_csi="+d));l.criticalCss&&(d=l.criticalCss,a+="&ccis="+d.total_critical_inlined_size+"&cces="+d.total_original_external_size+"&ccos="+d.total_overhead_size+"&ccrl="+d.num_replaced_links+"&ccul="+d.num_unreplaced_links);""!=f.b&&(a+=f.b);document.referrer&&(a+="&ref="+c(document.referrer));a+="&url="+c(f.d);l.beaconUrl=a;(new Image).src=a}};
+l.e=function(f,a,d,b){var e=new m(f,a,d,b);g.addEventListener?g.addEventListener(a,function(){n(e)},!1):g.attachEvent("on"+a,function(){n(e)})};l.addInstrumentationInit=l.e;})();
 
-pagespeed.addInstrumentationInit('http://1-ps.googleusercontent.com/beacon?org=109_1_cn', 'load', '&id=1380515758594936', 'http://www.landofthebrave.info/colonial-america-privacy-statement.htm');</script></body></html>
+pagespeed.addInstrumentationInit('http://1-ps.googleusercontent.com/beacon?org=113_3_cn', 'load', '&s_ttfb=239&id=1393207684606633', 'http://www.landofthebrave.info/colonial-america-privacy-statement.htm');</script></body></html>
