--- a/i/in/ins/instavinez.com.html
+++ b/i/in/ins/instavinez.com.html
@@ -1,12 +1,12 @@
-<!--The following is the downloaded HTML source of the instavinez.com privacy policy that was archived on 2013-12-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131223135035id_/http%3A//www.instavinez.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the instavinez.com privacy policy that was archived on 2014-02-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140224023602id_/http%3A//www.instavinez.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 <title>InstaVinez Privacy Policy</title>
 <meta charset="utf-8">
-<script async="" src="//www.google-analytics.com/analytics.js"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js"></script><script async="" src="//ajax.cloudflare.com/cdn-cgi/nexp/acv=5e636c62d6/cloudflare.min.js"></script><script type="text/javascript">
+<script async="" src="//www.google-analytics.com/analytics.js"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js"></script><script async="" src="//ajax.cloudflare.com/cdn-cgi/nexp/dok8v=221574e73d/cloudflare.min.js"></script><script type="text/javascript">
 //<![CDATA[
-try{if (!window.CloudFlare) {var CloudFlare=[{verbose:0,p:0,byc:0,owlid:"cf",bag2:1,mirage2:0,oracle:0,paths:{cloudflare:"/cdn-cgi/nexp/acv=964071af18/"},atok:"6e97b80e27bbc821531826ffa1346f74",petok:"9818505284b8b2d6e0b3bdd300cce0bb5843856c-1387806635-1800",zone:"instavinez.com",rocket:"0",apps:{"abetterbrowser":{"ie":"7"}}}];var a=document.createElement("script"),b=document.getElementsByTagName("script")[0];a.async=!0;a.src="//ajax.cloudflare.com/cdn-cgi/nexp/acv=5e636c62d6/cloudflare.min.js";b.parentNode.insertBefore(a,b);}}catch(e){};
+try{if (!window.CloudFlare) {var CloudFlare=[{verbose:0,p:1392312124,byc:0,owlid:"cf",bag2:1,mirage2:0,oracle:0,paths:{cloudflare:"/cdn-cgi/nexp/dok8v=02fcfa4f56/"},atok:"6e97b80e27bbc821531826ffa1346f74",petok:"37cb5d541482b4c6c8255164b9c5961b491e195a-1393209362-1800",zone:"instavinez.com",rocket:"0",apps:{"abetterbrowser":{"ie":"7"}}}];var a=document.createElement("script"),b=document.getElementsByTagName("script")[0];a.async=!0;a.src="//ajax.cloudflare.com/cdn-cgi/nexp/dok8v=221574e73d/cloudflare.min.js";b.parentNode.insertBefore(a,b);}}catch(e){};
 //]]>
 </script>
 <link rel="stylesheet" href="http://www.instavinez.com/css/main.css?ver51"><link rel="shortcut icon" href="http://www.instavinez.com/favicon.ico" type="image/x-icon">
@@ -116,7 +116,16 @@ $(function () {
 			</map> 
 		</div>
 		<div style="display:inline-block; height: 250px;">
-			<script type="text/javascript" src="http://ap.lijit.com///www/delivery/fpi.js?z=232669&amp;u=instavinez&amp;width=300&amp;height=250"></script>
+			<script type="text/javascript"><!--
+	google_ad_client = "ca-pub-3689728596914162";
+	/* InstaVinez */
+	google_ad_slot = "9699893777";
+	google_ad_width = 300;
+	google_ad_height = 250;
+	//-->
+	</script>
+	<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
 		</div>
 
 		<div id="footer">
