--- a/d/de/des/designspark.com.html
+++ b/d/de/des/designspark.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the designspark.com privacy policy that was archived on 2013-11-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131121174434id_/http%3A//www.designspark.com/eng/page/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the designspark.com privacy policy that was archived on 2014-02-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140224164141id_/http%3A//designspark.com/eng/page/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class="not-ie6 js no-flexbox canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><!-- <![endif]--><!--[if !IE]> <html class="not-ie6" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"> <![endif]--><!--[if lt IE 7]> <html class="no-js lt-ie10 lt-ie9 lt-ie8 lt-ie7" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"> <![endif]--><!--[if IE 7]>    <html class="no-js not-ie6 lt-ie10 lt-ie9 lt-ie8" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"> <![endif]--><!--[if IE 8]>    <html class="no-js not-ie6 lt-ie10 lt-ie9" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"> <![endif]--><!--[if IE 9]>    <html class="no-js not-ie6 lt-ie10" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"> <![endif]--><!--[if gt IE 9]> <html class="no-js" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"> <![endif]--><head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -102,7 +102,7 @@ var Croogo = {"basePath":"\/eng\/","params":{"controller":"nodes","action":"view
 </li><li class=""><a href="/eng/nodes/view/type:design-centre/slug:arduino" id="link-38" title="Arduino Design Centre" class="arduino"><span>Arduino</span></a>
 </li><li class=""><a href="/eng/nodes/view/type:design-centre/slug:mbed-3" id="link-44" title="MBED Design Centre" class="mbed"><span>MBED</span></a>
 </li><li class=""><a href="/eng/nodes/view/type:design-centre/slug:synergy" id="link-45" title="Synergy Design Centre" class="synergy"><span>Synergy</span></a>
-</li><li class=""><a href="/eng/nodes/view/type:design-centre/slug:designspark-magazine" id="link-46" title="Read the RS Designspark Magazine" class="etech-"><span>Designspark Magazine</span></a>
+</li><li class=""><a href="/eng/nodes/view/type:design-centre/slug:designspark-magazine" id="link-46" title="Read the RS DesignSpark Magazine" class="etech-"><span>DesignSpark Magazine Electronics</span></a>
 </li><li class=""><a href="/eng/nodes/view/type:design-centre/slug:3d-design-2" id="link-47" title="See 3D design Models"><span>3D Design</span></a>
 </li><li class=""><a href="/eng/nodes/view/type:design-centre/slug:open-source" id="link-57"><span>Open Source</span></a>
 </li></ul></li><li class=""><a href="/eng/page/mechanical" id="link-58" title="DesignSpark Mechanical" class="mechanical"><span>Free 3D Software</span></a>
@@ -141,7 +141,7 @@ var Croogo = {"basePath":"\/eng\/","params":{"controller":"nodes","action":"view
     <header>
 		<h1>Privacy Policy</h1>
 		
-<ul class="tag-list"><li><a href="/blog/term/DS3Updates/locale:eng" title="View content tagged with DesignSpark Updates">DesignSpark Updates</a></li></ul>	    <p class="comment-count">9991 views</p>	</header>
+<ul class="tag-list"><li><a href="/blog/term/DS3Updates/locale:eng" title="View content tagged with DesignSpark Updates">DesignSpark Updates</a></li></ul>	    <p class="comment-count">13388 views</p>	</header>
     
     
     <p><strong>We are committed to safeguarding your privacy online. Please read the following policy to understand how your personal information will be treated when you use or register with DesignSpark.</strong></p>
