--- a/s/sh/she/shetoldme.com.html
+++ b/s/sh/she/shetoldme.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the shetoldme.com privacy policy that was archived on 2013-11-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131127165258id_/http%3A//shetoldme.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the shetoldme.com privacy policy that was archived on 2014-02-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140225065238id_/http%3A//shetoldme.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" dir="ltr" class="js"><head>
   <title>PRIVACY POLICY FOR SHETOLDME.COM : SHE TOLD ME</title>
@@ -201,7 +201,7 @@ We also may use DART cookies for ad serving through Google’s DoubleClick, whic
     <div align="center">
 
 <a href="http://www.health-reviewer.com" target="_blank"><img src="http://www.health-reviewer.com/sites/health-reviewer.com/images/banners/220x109.jpg" width="170" height="84" alt="Health Reviewer: Health, Beauty and Fitness Products Reviews and Videos" border="0"></a>
-<br><a href="http://www.health-reviewer.com/video-reviews/ada-org-american-dental-association-ada-best-video-review-176.htm" target="_blank">ada.org - American Dental Association (ADA)</a><br>
+<br><a href="http://www.health-reviewer.com/video-reviews/homeinstead-com-home-instead-best-video-review-160.htm" target="_blank">homeinstead.com - Home Instead</a><br>
 <!-- BuySellAds.com Zone Code -->
 <div id="bsap_1253750" class="bsarocks bsap_79bbad146af7b8981269a3aecac71c59"></div>
 <!-- End BuySellAds.com Zone Code -->
@@ -237,7 +237,7 @@ We also may use DART cookies for ad serving through Google’s DoubleClick, whic
               <div id="content_right" class="column">
 		          <div id="block-block-12" class="block block-block">
     <div class="content">
-    <div align="center"><a href="http://december-calendar.com" title="December 2013 Calendar" target="_blank">Download and print the ultimate December 2013 calendar for free:<br><img src="http://december-calendar.com/images/calendar-calendrier-calendario-kalender.jpg" width="125" height="125" alt="December 2013 Calendar" border="0"></a></div><div align="center"><a href="http://november-calendar.com" title="November 2013 calendar" target="_blank">November 2013 calendar</a><br><a href="http://december-calendar.com" title="December 2013 calendar" target="_blank">December 2013 calendar</a></div>  </div>
+    <div align="center"><a href="http://december-calendar.com" title="December 2013 Calendar" target="_blank">Download and print the ultimate December 2013 calendar for free:<br><img src="http://december-calendar.com/images/calendar-calendrier-calendario-kalender.jpg" width="125" height="125" alt="December Calendar2013" border="0"></a></div><div align="center"><a href="http://december-calendar.com" title="December 2013 calendar" target="_blank">December 2013 calendar</a><br><a href="http://january-calendar.com/2014/" title="January 2014 calendar" target="_blank">January 2014 calendar</a></div>  </div>
 </div>
 <div id="block-aggregator-category-1" class="block block-aggregator">
       <h2 class="title">Best Reviews</h2>
@@ -250,7 +250,7 @@ We also may use DART cookies for ad serving through Google’s DoubleClick, whic
 </li>
 </ul></div><div class="more-link"><a href="/best-reviewer-rss" title="View this category's recent news.">more</a></div>  </div>
 </div>
-		  <div align="center"><iframe src="http://www.best-reviewer.com/articles/ad.php?w=160&amp;h=600&amp;l=en&amp;t=stm160&amp;r=1385386674" width="160" height="600" frameborder="0" scrolling="NO" marginwidth="0" marginheight="0">
+		  <div align="center"><iframe src="http://www.best-reviewer.com/articles/ad.php?w=160&amp;h=600&amp;l=en&amp;t=stm160&amp;r=1386476941" width="160" height="600" frameborder="0" scrolling="NO" marginwidth="0" marginheight="0">
 <A HREF="http://www.best-reviewer.com/articles/ad.php?w=160&h=600&l=en&t=stm160">A link to a cool product...</A>
 </iframe><br><br><div id="bsap_1278521" class="bsarocks bsap_79bbad146af7b8981269a3aecac71c59"></div></div>
                   </div> <!-- /content_right -->
@@ -323,5 +323,5 @@ var infolink_ad_link_color = '1b81ca';
 
 
 
-<!-- Page cached by Boost @ 2013-11-25 05:37:54, expires @ 2013-11-28 05:37:54 -->
+<!-- Page cached by Boost @ 2013-12-07 20:29:01, expires @ 2013-12-10 20:29:01 -->
 </body></html>
